HelloUltraviolet/Fixtures/RejectedSource/Patterns/IfCaseUnreachable/Source/Main.uv
//! Rejected pattern specimen for an unreachable case after an irrefutable pattern.

public procedure ifCaseUnreachableReference() -> i32 {
    let value: i32 = 1
    return if value is {
        _ {
            1
        }
        1 {
            2
        }
    }
}
